Bug 616594 - overflow:auto causes DIV to get tab focus, r=bz